--- a/_includes/head/custom.html
+++ b/_includes/head/custom.html
@@ -1,5 +1,7 @@
 <!-- start custom head snippets -->
 
 <!-- insert favicons. use https://realfavicongenerator.net/ -->
+<link href="https://cdn.jsdelivr.net/gh/bitmaks/cm-web-fonts@latest/fonts.css" rel="stylesheet"> 
+
 
 <!-- end custom head snippets -->
