--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -32,9 +32,12 @@ $bodoni: "Bodoni MT", serif !default;
 $calisto: "Calisto MT", serif !default;
 $garamond: Garamond, serif !default;
 
-$global-font-family: $helvetica !default;
-$header-font-family: $helvetica !default;
-$caption-font-family: $helvetica !default;
+/* cmu */
+$cmu : "Computer Modern Serif", serif !default;
+
+$global-font-family: $cmu !default;
+$header-font-family: $cmu !default;
+$caption-font-family: $cmu !default;
 
 /* type scale */
 $type-size-1: 2.441em !default; // ~39.056px
