--- a/_sass/minimal-mistakes/_navigation.scss
+++ b/_sass/minimal-mistakes/_navigation.scss
@@ -11,7 +11,7 @@
   margin: 0 auto;
   max-width: 100%;
   padding-inline: 1em;
-  font-family: $sans-serif;
+  font-family: $cmu;
   -webkit-animation: $intro-transition;
   animation: $intro-transition;
   -webkit-animation-delay: 0.3s;
