--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -34,16 +34,24 @@ body {
 }
 
 .page {
-  @include breakpoint($large) {
-    float: inline-end;
-    width: calc(100% - #{$right-sidebar-width-narrow});
-    padding-inline-end: $right-sidebar-width-narrow;
+//  @include breakpoint($large) {
+//    float: inline-end;
+//    width: calc(100% - #{$right-sidebar-width-narrow});
+//    padding-inline-end: $right-sidebar-width-narrow;
+//  }
+//
+//  @include breakpoint($x-large) {
+//    width: calc(100% - #{$right-sidebar-width});
+//    padding-inline-end: $right-sidebar-width;
+//  }
+//
+  @include breakpoint($large){
+    padding-right: 0;
+  }
+  @include breakpoint($x-large){
+    padding-right: 0;
   }
 
-  @include breakpoint($x-large) {
-    width: calc(100% - #{$right-sidebar-width});
-    padding-inline-end: $right-sidebar-width;
-  }
 
   .page__inner-wrap {
     float: inline-start;
