--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -6,6 +6,13 @@
    Typography
    ========================================================================== */
 
+@font-face {
+   font-family: 'Shuvro';
+   src: url('/assets/shuvo.ttf') format('trutype');
+   font-weight: normal;
+   font-style: normal;
+}
+
 $doc-font-size: 14px !default;
 $doc-font-size-medium: $doc-font-size * 1.125 !default;
 $doc-font-size-large: $doc-font-size * 1.25 !default;
@@ -35,9 +42,11 @@ $garamond: Garamond, serif !default;
 /* cmu */
 $cmu : "Computer Modern Serif", serif !default;
 
-$global-font-family: $cmu !default;
-$header-font-family: $cmu !default;
-$caption-font-family: $cmu !default;
+$shuvro : "Shuvro", serif !default;
+
+$global-font-family: $shuvro !default;
+$header-font-family: $shuvro !default;
+$caption-font-family: $shuvro !default;
 
 /* type scale */
 $type-size-1: 2.441em !default; // ~39.056px
