--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -8,7 +8,7 @@
 
 @font-face {
    font-family: 'Shuvro';
-   src: url('/assets/shuvo.ttf') format('trutype');
+   src: url('/assets/shuvo.ttf') format('truetype');
    font-weight: normal;
    font-style: normal;
 }
