--- a/_includes/masthead.html
+++ b/_includes/masthead.html
@@ -1,4 +1,4 @@
-{% capture logo_path %}{{ site.logo }}{% endcapture %}
+<!-- {% capture logo_path %}{{ site.logo }}{% endcapture %}
 
 <div class="masthead">
   <div class="masthead__inner-wrap">
@@ -37,3 +37,4 @@
     </div>
   </div>
 </div>
+ -->
